--- a/prodbadmin.org
+++ b/prodbadmin.org
@@ -174,6 +174,25 @@ You need to restart the instance to make previous changes take effects. You can 
 + grand sysdba to someuser;
 When you add someuser to the passwd file, the user can connect to the server as sys*
 + sqlplus <database connection string> as sys*
-
+** Starting and Stop Database
+*** Understanding OS Authentication
+OS authentication means if you can log into OS via an OS authentication account, you can access the database without giving a correct password.
++ sqlplus anyname/anypwd as sysdba
+*** Starting Database 
++ sqlplus / as sysdba
++ SQL>startup
+For the prior command work, you need either an spfile or init.ora file in $ORACLE_HOME/dbs directory.
+The startup invoke 3 steps:
++ Starting the instance
++ Mounting the database
++ Opening the database
+The above 3 steps can be executed seprately:
++ SQL>start nomount
++ SQL>alter database mount
++ SQL>alter database open
+The start up scheme can be described by the following picture:
+[[./pic/startupscheme.png]]
+#+CAPTION:Phases of Oracle startup
+#+NAME:FIG2-2:Phases of Oracle startup
 
 
